# gpupad

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  GPUpad.qbs  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageWindow.cpp  MessageWindow.h  PKGBUILD  README.md  Singletons.cpp  THIRD-PARTY.md  appveyor.yml  dark.qpal  main.cpp  msvc2015.bat  qt5.natvis  resources.qrc
.github/workflows/: build.yml
actions/: Import_glTF.js
cmake/: FetchSparse.cmake  FindSlang.cmake
extra/actions/: Compile all shader files to Spir-V.js  Evaluate Script.js  Import_glTF.js  Insert Orbit Camera.js  Make Fragment Shader Session.js
extra/qml/: imports.qml  script.mjs
files/: BinaryEditor.cpp  BinaryEditor.h  BinaryFile.h  DockWindow.cpp  DockWindow.h  FileDialog.cpp  FileDialog.h  FileManager.h  FileTypes.h  FindReplaceBar.h  FindReplaceBar.ui  ImageEditor.cpp  ImageEditor.h  SourceEditor.cpp  SourceEditorSettings.cpp  SourceFile.cpp
libs/GL/: wglext.h
libs/KDSingleApplication/: LICENSE.MIT.txt  kdsingleapplication.cpp  kdsingleapplication.h  kdsingleapplication_lib.h  kdsingleapplication_localsocket.cpp  kdsingleapplication_localsocket_p.h
libs/Qt-RangeSlider/: LICENSE  RangeSlider.cpp  RangeSlider.h
libs/SPIRV-Cross/: CMakeLists.txt
libs/SingleApplication/: singleapplication.cpp  singleapplication.h  singleapplication_p.cpp  singleapplication_p.h
libs/d3d12/: RenderTargetHelper.cpp  RenderTargetHelper.hpp
libs/dllreflect/: CMakeLists.txt  test.cpp
libs/gli/: readme.md
libs/tga/: CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  encoder.cpp  stdio.cpp
libs/tinydds/: LICENSE  README.md  tinydds.h
libs/tinyexr/: tinyexr.h
render/: GLFramebuffer.h  GLObject.h  GLPrimitives.cpp  GLPrimitives.h  GLProgram.cpp  GLShader.cpp  GLShader.h  GLTexture.cpp  RenderCall.cpp  RenderCall.h  RenderContext.h  RenderTask.cpp  RenderTask.h  Renderer.h  ShaderCompiler.cpp
samples/: samples.gpjs  samples.gpupad
samples/Atomic Counters/: atomics.comp  atomics.gpjs
samples/Bitonic sort/: FillRandom.comp  Script.js
samples/Compute/: compute.gpjs  gameoflife.comp  gameoflife.glsl
samples/Cube/: cube.fs  cube.gpjs  cube.vs  math.js
samples/Cube HLSL/: cube.fx  cube.gpjs
samples/Cube Video/: cube.fs  cube.gpjs
samples/Indirect/: generate.glsl  indirect.gpjs  setup.glsl  vertex.glsl
samples/Instancing/: instancing.gpjs
samples/Javascript Library/: delaunay.gpjs  fragment.fs  generate.js
samples/Minimal/: minimal.fs  minimal.gpjs  minimal.vs
samples/Paint/: line.vs  paint.gpjs
samples/Particles/: Particles.gpjs  particle.comp  particle.fs  particle.vs  reset.comp  reset.glsl  update.comp  update.glsl
samples/Printf/: attributeless.vs  printf.fs  printf.gpjs
samples/Quad/: quad.gpjs  quad.vs  textured.fs
samples/Shadertoy/: attributeless.vs  image.glsl  ldscDM.glsl  shadertoy.fs  shadertoy.gpjs
samples/Stencil Buffer/: fill.fs  stencil.gpjs
samples/Sync Test/: sync.frag  synctest.gpjs
samples/SyncTest/: attributeless.vs  sync.frag
samples/Tessellation/: geodesic.frag  geodesic.geom  geodesic.vert  math.js  tessellation.gpjs
samples/Video/: textured.fs  video.gpjs
samples/Volume/: fill.comp  volume.gpjs
samples/compute/: grid.glsl
samples/cube/: cube.fs
samples/gltf Viewer/: Readme.md  gltf-Viewer.gpjs  math.js
samples/gltf2/: simple.fs  simple.vs
session/: AttributeProperties.ui  BindingProperties.cpp  BindingProperties.h  BufferProperties.ui  CallProperties.ui  ColumnProperties.ui  DataComboBox.cpp  ExpressionEditor.h  FramebufferProperties.ui  Item.h  PrimitivesProperties.ui  ProgramProperties.ui  ReferenceComboBox.cpp  SessionEditor.h  SessionProperties.cpp  ShaderProperties.ui  StateProperties.ui  TextureProperties.cpp  TextureProperties.h
share/applications/: gpupad.desktop  io.github.houmain.gpupad.desktop
src/: .clang-format  AboutDialog.cpp  AssemblyWindow.cpp  AssemblyWindow.h  AutoOrientationSplitter.h  EditActions.h  EvaluatedPropertyCache.cpp  EvaluatedPropertyCache.h  Evaluation.h  FileCache.cpp  FileCache.h  FileDialog.cpp  FileDialog.h  ImageData.cpp  ImageData.h  InputState.cpp  InputState.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageList.cpp  MessageList.h  MessageWindow.cpp  MessageWindow.h  OutputWindow.cpp  OutputWindow.h  Range.h  Settings.cpp  Settings.h  Singletons.cpp  Singletons.h  SourceType.cpp  SourceType.h  Style.cpp  Style.h  SynchronizeLogic.cpp  SynchronizeLogic.h  TextureData.cpp  TextureData.h  TextureData_DDS.cpp  (+12 more)
src/editors/: BinaryEditor.cpp  BinaryEditor.h  BinaryEditorToolBar.cpp  BinaryEditorToolBar.ui  BinaryEditor_DataModel.h  BinaryEditor_EditableRegion.h  BinaryEditor_HexModel.h  BinaryEditor_SpinBoxDelegate.h  Completer.h  DockTitle.cpp  DockTitle.h  DockWindow.cpp  DockWindow.h  DoubleRange.h  EditorManager.cpp  EditorManager.h  FindReplaceBar.cpp  FindReplaceBar.h  FindReplaceBar.ui  GlslHighlighter.cpp  GlslHighlighter.h  Histogram.cpp  Histogram.h  HlslHighlighter.cpp  HlslHighlighter.h  IEditor.h  ImageEditor.cpp  ImageEditor.h  JsHighlighter.cpp  JsHighlighter.h  MultiTextCursors.cpp  MultiTextCursors.h  QmlView.cpp  QmlView.h  RectangularSelection.h  SourceEditor.cpp  SourceEditor.h  SourceEditorToolBar.cpp  SourceEditorToolBar.h  SourceEditorToolBar.ui  (+19 more)
src/files/: BinaryFile.cpp  FileManager.cpp  FindReplaceBar.cpp  GlslHighlighter.cpp  GlslHighlighter.h  ImageFile.cpp  ImageFile.h  SourceEditor.h  SourceEditorSettings.h  SourceFile.h
src/render/: AdapterIdentity.cpp  AdapterIdentity.h  BufferBase.cpp  BufferBase.h  CompileShader.cpp  CompileShader.h  CompositorSync.cpp  CompositorSync.h  ComputeRange.cpp  ComputeRange.h  Device.h  GLBuffer.cpp  GLBuffer.h  GLCall.cpp  GLCall.h  GLContext.h  GLFramebuffer.cpp  GLFramebuffer.h  GLItem.h  GLObject.h  GLPrimitives.cpp  GLPrimitives.h  GLPrintf.cpp  GLPrintf.h  GLProgram.cpp  GLProgram.h  GLShader.cpp  GLShader.h  GLShareSynchronizer.h  GLStream.cpp  GLStream.h  GLTarget.cpp  GLTarget.h  GLTexture.cpp  GLTexture.h  GLVertexStream.cpp  GLVertexStream.h  GLWindow.cpp  GLWindow.h  GPUWindow.h  (+53 more)
src/session/: Item.cpp  (+59 more)
(+483 files in other folders)
